feature: Enhance WeChat Moments strategy with new content and visual planning documents; update ModelScopeQwenImage.js for improved image handling; add memory config

--- a/记忆与上下文机制分析.md
+++ b/记忆与上下文机制分析.md
@@ -33,6 +33,336 @@ LibreChat 将对话分成“短期上下文”和“长期记忆”两层：
 若要自定义短期上下文，可实现新的 `contextStrategy`（如按角色过滤、按主题聚类）并在 Agent 初始化时注入。
 
 ## 3. 长期记忆（Memory Service）
+
+### 3.0 核心实现机制深度分析
+
+#### 3.0.1 为什么配置记忆 Agent 后可以自动提取用户特征？
+
+**核心原理：**
+配置 `memory.agent` 后，系统会创建一个**独立的记忆管理 Agent**，该 Agent 使用 LLM 的能力来理解对话内容，并通过**工具调用机制**自动提取和存储用户特征。整个过程分为两个阶段：**记忆读取（嵌入上下文）**和**记忆写入（特征提取）**。
+
+#### 3.0.2 记忆如何嵌入到上下文？
+
+**流程详解：**
+
+1. **在 `buildMessages()` 阶段调用 `useMemory()`**：
+   ```javascript
+   // api/server/controllers/agents/client.js:465-468
+   const withoutKeys = await this.useMemory();
+   if (withoutKeys) {
+     systemContent += `${memoryInstructions}\n\n# Existing memory about the user:\n${withoutKeys}`;
+   }
+   ```
+
+2. **`useMemory()` 内部执行流程**：
+   ```javascript
+   // api/server/controllers/agents/client.js:516-621
+   async useMemory() {
+     // 1. 权限和配置检查
+     // 2. 加载记忆 Agent 配置（从 config.yaml 的 memory.agent）
+     // 3. 调用 createMemoryProcessor
+     const [withoutKeys, processMemory] = await createMemoryProcessor({
+       userId, config, messageId, conversationId,
+       memoryMethods: { setMemory, deleteMemory, getFormattedMemories },
+       res: this.options.res,
+     });
+     this.processMemory = processMemory;  // 保存供后续使用
+     return withoutKeys;  // 返回格式化后的记忆文本
+   }
+   ```
+
+3. **`createMemoryProcessor()` 格式化记忆**：
+   ```typescript
+   // packages/api/src/agents/memory.ts:412-458
+   export async function createMemoryProcessor({...}) {
+     // 1. 获取用户的所有记忆
+     const { withKeys, withoutKeys, totalTokens } = 
+       await memoryMethods.getFormattedMemories({ userId });
+     
+     // 2. 返回两个值：
+     //    - withoutKeys: 用于注入到系统提示（不包含key，只显示value）
+     //    - processMemory: 用于后续写入记忆的函数
+     return [withoutKeys, async function (messages) { ... }];
+   }
+   ```
+
+4. **`getFormattedMemories()` 格式化逻辑**：
+   ```typescript
+   // packages/data-schemas/src/methods/memory.ts:121-159
+   async function getFormattedMemories({ userId }) {
+     const memories = await getAllUserMemories(userId);
+     
+     // withoutKeys 格式：用于注入系统提示（简洁版）
+     const withoutKeys = sortedMemories
+       .map((memory, index) => {
+         const date = formatDate(new Date(memory.updated_at!));
+         return `${index + 1}. [${date}]. ${memory.value}`;
+       })
+       .join('\n\n');
+     
+     // withKeys 格式：用于传递给记忆 Agent（包含key和token信息）
+     const withKeys = sortedMemories
+       .map((memory, index) => {
+         const date = formatDate(new Date(memory.updated_at!));
+         const tokenInfo = memory.tokenCount ? ` [${memory.tokenCount} tokens]` : '';
+         return `${index + 1}. [${date}]. ["key": "${memory.key}"]${tokenInfo}. ["value": "${memory.value}"]`;
+       })
+       .join('\n\n');
+     
+     return { withKeys, withoutKeys, totalTokens };
+   }
+   ```
+
+5. **最终注入到系统提示**：
+   - `withoutKeys` 被追加到 `systemContent` 中
+   - 格式示例：
+     ```
+     The system automatically stores important user information...
+     
+     # Existing memory about the user:
+     1. [2024-01-15]. 用户是一名软件工程师，擅长 Python 和 JavaScript
+     2. [2024-01-16]. 用户喜欢喝咖啡，通常在早上 9 点开始工作
+     ```
+   - 这样，每次对话时，主 Agent 都能看到用户的历史记忆
+
+#### 3.0.3 Agent 如何对用户提问进行总结归纳出特征？
+
+**核心机制：工具调用（Tool Calling）**
+
+1. **触发时机**：
+   ```javascript
+   // api/server/controllers/agents/client.js:953
+   // 在 AI 回复完成后，自动调用
+   memoryPromise = this.runMemory(messages);
+   ```
+
+2. **消息窗口选择**：
+   ```javascript
+   // api/server/controllers/agents/client.js:660-691
+   async runMemory(messages) {
+     const messageWindowSize = memoryConfig?.messageWindowSize ?? 5;
+     
+     // 选择最近的消息窗口（默认5条）
+     // 优先选择以用户消息开头的窗口
+     let messagesToProcess = [...messages];
+     if (messages.length > messageWindowSize) {
+       for (let i = messages.length - messageWindowSize; i >= 0; i--) {
+         const potentialWindow = messages.slice(i, i + messageWindowSize);
+         if (potentialWindow[0]?.role === 'user') {
+           messagesToProcess = [...potentialWindow];
+           break;
+         }
+       }
+     }
+     
+     // 过滤图片URL，转换为文本格式
+     const filteredMessages = messagesToProcess.map((msg) => this.filterImageUrls(msg));
+     const bufferString = getBufferString(filteredMessages);
+     const bufferMessage = new HumanMessage(`# Current Chat:\n\n${bufferString}`);
+     
+     // 传递给记忆 Agent 处理
+     return await this.processMemory([bufferMessage]);
+   }
+   ```
+
+3. **创建独立的记忆 Agent**：
+   ```typescript
+   // packages/api/src/agents/memory.ts:271-410
+   export async function processMemory({...}) {
+     // 1. 创建记忆工具（set_memory 和 delete_memory）
+     const memoryTool = createMemoryTool({
+       userId, tokenLimit, setMemory, validKeys, totalTokens,
+     });
+     const deleteMemoryTool = createDeleteMemoryTool({
+       userId, validKeys, deleteMemory,
+     });
+     
+     // 2. 准备记忆状态信息（包含现有记忆和token使用情况）
+     let memoryStatus = `# Existing memory:\n${memory ?? 'No existing memories'}`;
+     if (tokenLimit) {
+       memoryStatus = `# Memory Status:
+       Current memory usage: ${currentMemoryTokens} tokens
+       Token limit: ${tokenLimit} tokens
+       Remaining capacity: ${remainingTokens} tokens
+       
+       # Existing memory:
+       ${memory ?? 'No existing memories'}`;
+     }
+     
+     // 3. 创建 Run 实例（独立的 Agent 执行环境）
+     const run = await Run.create({
+       runId: messageId,
+       graphConfig: {
+         type: 'standard',
+         llmConfig: finalLLMConfig,  // 使用配置的模型（如 Deepseek）
+         tools: [memoryTool, deleteMemoryTool],  // 提供工具
+         instructions,  // 使用配置的 instructions（关键！）
+         additional_instructions: memoryStatus,  // 现有记忆状态
+         toolEnd: true,
+       },
+       customHandlers: {
+         [GraphEvents.TOOL_END]: new BasicToolEndHandler(memoryCallback),
+       },
+       returnContent: true,
+     });
+     
+     // 4. 执行 Agent，传入当前对话窗口
+     const inputs = { messages };
+     const content = await run.processStream(inputs, config);
+   }
+   ```
+
+4. **Agent 分析流程**：
+   - **输入**：当前对话窗口（最近5条消息）+ 现有记忆状态 + 配置的 instructions
+   - **处理**：LLM（如 Deepseek）根据 `instructions` 分析对话内容
+   - **输出**：Agent 决定是否调用 `set_memory` 或 `delete_memory` 工具
+
+5. **工具调用机制**：
+   ```typescript
+   // packages/api/src/agents/memory.ts:76-186
+   export const createMemoryTool = ({ userId, setMemory, validKeys, tokenLimit, totalTokens }) => {
+     return tool(
+       async ({ key, value }) => {
+         // 1. 验证 key 是否在 validKeys 列表中
+         if (validKeys && validKeys.length > 0 && !validKeys.includes(key)) {
+           return [`Invalid key "${key}"...`, undefined];
+         }
+         
+         // 2. 计算 token 数量
+         const tokenCount = Tokenizer.getTokenCount(value, 'o200k_base');
+         
+         // 3. 检查 token 限制
+         if (tokenLimit) {
+           const newTotalTokens = totalTokens + tokenCount;
+           if (newTotalTokens > tokenLimit) {
+             return [`Memory storage would exceed limit...`, errorArtifact];
+           }
+         }
+         
+         // 4. 调用 setMemory 写入数据库
+         const result = await setMemory({ userId, key, value, tokenCount });
+         if (result.ok) {
+           return [`Memory set for key "${key}" (${tokenCount} tokens)`, artifact];
+         }
+       },
+       {
+         name: 'set_memory',
+         description: 'Saves important information about the user into memory.',
+         schema: z.object({
+           key: z.string().describe('The key identifier for this memory'),
+           value: z.string().describe('Value MUST be a complete sentence...'),
+         }),
+       },
+     );
+   };
+   ```
+
+6. **数据库存储**：
+   ```typescript
+   // packages/data-schemas/src/methods/memory.ts:54-85
+   async function setMemory({ userId, key, value, tokenCount = 0 }) {
+     const MemoryEntry = mongoose.models.MemoryEntry;
+     // 使用 upsert：如果存在则更新，不存在则创建
+     await MemoryEntry.findOneAndUpdate(
+       { userId, key },
+       { value, tokenCount, updated_at: new Date() },
+       { upsert: true, new: true }
+     );
+     return { ok: true };
+   }
+   ```
+
+#### 3.0.4 为什么自定义 instructions 可以改变存储策略？
+
+**关键点：instructions 直接控制 Agent 的行为**
+
+1. **默认 instructions（按需存储）**：
+   ```typescript
+   // packages/api/src/agents/memory.ts:42-71
+   const getDefaultInstructions = (validKeys?, tokenLimit?) => `
+   Use the \`set_memory\` tool to save important information about the user, 
+   but ONLY when the user has requested you to remember something.
+   
+   1. ONLY use memory tools when the user requests memory actions...
+   2. NEVER store information just because the user mentioned it...
+   5. If the user doesn't ask you to remember or forget something, 
+      DO NOT use any memory tools.
+   `;
+   ```
+   - 这种 instructions 要求 Agent **只在用户明确请求时**才存储
+
+2. **自定义 instructions（主动存储）**：
+   ```yaml
+   # config.yaml:485-497
+   instructions: |
+     你是一个智能记忆管理助手。分析对话内容，自动提取并存储以下类型的重要信息：
+     1. 用户的身份信息（姓名、昵称、职业、角色等）
+     2. 用户的偏好和习惯（喜欢什么、不喜欢什么、常用方式等）
+     3. 用户的工作和学习信息（工作内容、学习目标、项目等）
+     4. 用户的技能和兴趣（擅长什么、兴趣爱好等）
+     5. 对话中的重要上下文信息（重要事件、关系、背景等）
+     
+     使用 set_memory 工具自动存储这些信息，使用合适的 key...
+     主动识别并存储重要信息，不要等待用户明确请求。
+   ```
+   - 这种 instructions 要求 Agent **主动识别并存储**重要信息
+
+3. **instructions 如何生效**：
+   ```typescript
+   // packages/api/src/agents/memory.ts:427-428
+   const finalInstructions = instructions || getDefaultInstructions(validKeys, tokenLimit);
+   
+   // 传递给 Run.create
+   graphConfig: {
+     instructions: finalInstructions,  // 作为系统提示的一部分
+     ...
+   }
+   ```
+   - `instructions` 作为系统提示传递给 LLM
+   - LLM 根据这些指令来决定是否调用工具
+   - 不同的 instructions 会导致不同的行为模式
+
+#### 3.0.5 完整执行流程图
+
+```
+用户发送消息
+    ↓
+AgentClient.buildMessages()
+    ↓
+useMemory() 被调用
+    ↓
+createMemoryProcessor()
+    ├─→ getFormattedMemories() → 从数据库读取历史记忆
+    ├─→ 返回 withoutKeys（格式化文本）
+    └─→ 返回 processMemory 函数（保存到 this.processMemory）
+    ↓
+withoutKeys 注入到 systemContent
+    ↓
+主 Agent 生成回复
+    ↓
+回复完成后，runMemory(messages) 被调用
+    ↓
+选择消息窗口（最近5条）
+    ↓
+processMemory() 被调用
+    ├─→ 创建 set_memory 和 delete_memory 工具
+    ├─→ 准备记忆状态（现有记忆 + token 使用情况）
+    ├─→ 创建 Run 实例（独立的记忆 Agent）
+    │   ├─→ 使用配置的模型（如 Deepseek）
+    │   ├─→ 使用配置的 instructions（关键！）
+    │   ├─→ 提供工具（set_memory, delete_memory）
+    │   └─→ 传入现有记忆状态
+    └─→ run.processStream({ messages: [当前对话窗口] })
+        ↓
+    记忆 Agent 分析对话
+        ├─→ 根据 instructions 判断是否需要存储
+        ├─→ 如果需要，调用 set_memory({ key, value })
+        └─→ 工具执行 → setMemory() → 写入 MongoDB
+            ↓
+        下次对话时，新记忆会被自动读取并注入
+```
+
+### 3.1 记忆读取（自动）
 当配置开启且用户有 `Permissions.MEMORIES` 权限时，`useMemory()` 会：
 1. 校验用户与配置，决定是否启用记忆。
 2. 根据 `appConfig.memory.agent` 加载专用 Agent，构造记忆所用模型与提示词。
@@ -76,10 +406,156 @@ LibreChat 将对话分成“短期上下文”和“长期记忆”两层：
   }
 ```
 
-### 配置入口
-- `librechat.yaml` / 管理面板中的 `memory` 节点：可设置 `agent.id/model/provider`、`tokenLimit`、`validKeys`、启停等。
+### 3.2 记忆写入（半自动，有条件限制）
+
+**工作机制：**
+1. **触发时机**：在 AI 生成回复完成后，`AgentClient.chatCompletion()` 会调用 `runMemory(messages)` 方法。
+2. **消息窗口**：`runMemory` 会取最近的消息窗口进行分析：
+   - 默认窗口大小：5 条消息（可通过 `memory.messageWindowSize` 配置）
+   - 优先选择以用户消息开头的窗口
+   - 过滤掉图片 URL，只保留文本内容
+
+```660:691:api/server/controllers/agents/client.js
+  async runMemory(messages) {
+    try {
+      if (this.processMemory == null) {
+        return;
+      }
+      const appConfig = this.options.req.config;
+      const memoryConfig = appConfig.memory;
+      const messageWindowSize = memoryConfig?.messageWindowSize ?? 5;
+
+      let messagesToProcess = [...messages];
+      if (messages.length > messageWindowSize) {
+        for (let i = messages.length - messageWindowSize; i >= 0; i--) {
+          const potentialWindow = messages.slice(i, i + messageWindowSize);
+          if (potentialWindow[0]?.role === 'user') {
+            messagesToProcess = [...potentialWindow];
+            break;
+          }
+        }
+
+        if (messagesToProcess.length === messages.length) {
+          messagesToProcess = [...messages.slice(-messageWindowSize)];
+        }
+      }
+
+      const filteredMessages = messagesToProcess.map((msg) => this.filterImageUrls(msg));
+      const bufferString = getBufferString(filteredMessages);
+      const bufferMessage = new HumanMessage(`# Current Chat:\n\n${bufferString}`);
+      return await this.processMemory([bufferMessage]);
+    } catch (error) {
+      logger.error('Memory Agent failed to process memory', error);
+    }
+  }
+```
+
+3. **记忆处理流程**：
+   - `processMemory` 创建一个独立的记忆 Agent（使用配置的 `memory.agent`）
+   - 将当前对话窗口、现有记忆、记忆状态（token 使用情况）传递给记忆 Agent
+   - 记忆 Agent 使用 `set_memory` 和 `delete_memory` 工具来管理记忆
+
+```271:410:packages/api/src/agents/memory.ts
+export async function processMemory({
+  res,
+  userId,
+  setMemory,
+  deleteMemory,
+  messages,
+  memory,
+  messageId,
+  conversationId,
+  validKeys,
+  instructions,
+  llmConfig,
+  tokenLimit,
+  totalTokens = 0,
+}: {...}): Promise<(TAttachment | null)[] | undefined> {
+  try {
+    const memoryTool = createMemoryTool({
+      userId,
+      tokenLimit,
+      setMemory,
+      validKeys,
+      totalTokens,
+    });
+    const deleteMemoryTool = createDeleteMemoryTool({
+      userId,
+      validKeys,
+      deleteMemory,
+    });
+    ...
+    const run = await Run.create({
+      runId: messageId,
+      graphConfig: {
+        type: 'standard',
+        llmConfig: finalLLMConfig,
+        tools: [memoryTool, deleteMemoryTool],
+        instructions,
+        additional_instructions: memoryStatus,
+        toolEnd: true,
+      },
+      customHandlers,
+      returnContent: true,
+    });
+    ...
+    const inputs = {
+      messages,
+    };
+    const content = await run.processStream(inputs, config);
+    ...
+  }
+}
+```
+
+**重要限制：默认行为是"按需存储"而非"自动存储"**
+
+默认指令（`getDefaultInstructions`）要求记忆 Agent **仅在用户明确请求时**才存储记忆：
+
+```42:71:packages/api/src/agents/memory.ts
+const getDefaultInstructions = (
+  validKeys?: string[],
+  tokenLimit?: number,
+) => `Use the \`set_memory\` tool to save important information about the user, but ONLY when the user has requested you to remember something.
+...
+1. ONLY use memory tools when the user requests memory actions with phrases like:
+   - "Remember [that] [I]..."
+   - "Don't forget [that] [I]..."
+   - "Please remember..."
+   - "Store this..."
+   - "Forget [that] [I]..."
+   - "Delete the memory about..."
+
+2. NEVER store information just because the user mentioned it in conversation.
+
+3. NEVER use memory tools when the user asks you to use other tools or invoke tools in general.
+
+4. Memory tools are ONLY for memory requests, not for general tool usage.
+
+5. If the user doesn't ask you to remember or forget something, DO NOT use any memory tools.
+...
+When in doubt, and the user hasn't asked to remember or forget anything, END THE TURN IMMEDIATELY.`;
+```
+
+**这意味着：**
+- ✅ **支持自动存储**：系统会在每次对话后自动分析消息并尝试存储
+- ⚠️ **有条件限制**：默认情况下，只有用户明确请求（如"记住我是木芒果大侠"）才会存储
+- 🔧 **可自定义**：通过修改 `memory.agent.instructions` 可以改变存储策略，实现更主动的自动存储
+
+**存储验证：**
+- 检查 `validKeys`：如果配置了有效键列表，只能使用列表中的键
+- 检查 `tokenLimit`：确保不超过配置的 token 限制
+- 使用 `setMemory` 方法将记忆写入数据库（MongoDB MemoryEntry 集合）
+
+### 3.3 配置入口
+- `librechat.yaml` / 管理面板中的 `memory` 节点：可设置 `agent.id/model/provider`、`tokenLimit`、`validKeys`、`messageWindowSize`、启停等。
 - 权限由 `Permissions.MEMORIES` 控制，未授权用户不会触发记忆。
 - `memoryMethods` 默认使用本地集合；若要接入自定义向量库，可在 `createMemoryProcessor` 注入新的实现。
+- **关键配置项**：
+  - `agent.instructions`：控制记忆 Agent 的存储策略（默认是"按需存储"，可改为"主动存储"）
+  - `messageWindowSize`：每次分析的消息数量（默认 5）
+  - `validKeys`：限制可用的记忆键，提高一致性
+  - `tokenLimit`：记忆存储的 token 上限
 
 ## 4. 外部上下文注入（工具/MCP/Web 搜索）
 即使未启用长期记忆，LibreChat 仍可通过工具把实时数据植入 prompt：
@@ -87,15 +563,131 @@ LibreChat 将对话分成“短期上下文”和“长期记忆”两层：
 - 工具输出会被写入当前短期上下文（作为 ToolMessage 或附件），供模型在本轮对话中使用。
 - 如需写入长期记忆，可在生成响应后手动调用 `this.processMemory` 并挑选重要事实写入。
 
-## 5. 扩展建议
+## 5. 记忆自动存储策略定制
+
+### 5.1 实现完全自动存储
+如果想要系统自动存储所有重要信息（不依赖用户明确请求），可以修改 `memory.agent.instructions`：
+
+```yaml
+memory:
+  agent:
+    provider: "ModelScope"
+    model: "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B"
+    instructions: |
+      你是一个智能记忆管理助手。分析对话内容，自动提取并存储以下类型的重要信息：
+      1. 用户的身份信息（姓名、昵称、职业等）
+      2. 用户的偏好和习惯
+      3. 用户的工作和学习信息
+      4. 用户的技能和兴趣
+      5. 对话中的重要上下文信息
+      
+      使用 set_memory 工具存储这些信息，使用合适的 key（如 personal_info, preferences, work_info 等）。
+      如果信息已经存在，使用 set_memory 更新它。
+      只有在用户明确要求删除时，才使用 delete_memory。
+    model_parameters:
+      temperature: 0.1
+```
+
+### 5.2 调整消息窗口大小
+控制每次分析的消息数量：
+
+```yaml
+memory:
+  messageWindowSize: 10  # 默认是 5，可以增加到 10 或更多
+```
+
+### 5.3 记忆键管理
+通过 `validKeys` 限制可用的记忆键，确保记忆结构一致：
+
+```yaml
+memory:
+  validKeys: ["preferences", "work_info", "personal_info", "skills", "interests", "context"]
+```
+
+## 6. 扩展建议
 | 需求 | 关键入口 | 说明 |
 | --- | --- | --- |
 | 自定义短期窗口 | `contextStrategy` / `handleContextStrategy` | 可新增按角色、按权重等策略 |
 | 新的长期记忆后端 | `memoryMethods` (`setMemory/getFormattedMemories`) | 替换为外部数据库或服务 |
-| 记忆写入时机 | `this.processMemory` | 在生成回复后手动挑选内容写回 |
+| 记忆写入时机 | `this.processMemory` / `runMemory` | 在生成回复后自动触发，也可手动调用 |
+| 自定义存储策略 | `memory.agent.instructions` | 修改记忆 Agent 的指令，实现不同的存储逻辑 |
 | 工具注入更多上下文 | `api/app/clients/tools` + `handleTools` | 新增 LangChain Tool 或 MCP 服务器 |
 
+## 7. 总结
+
+### 7.1 记忆自动存储机制总结
+
+**当前实现：**
+- ✅ **自动读取**：每次对话前自动检索并注入历史记忆
+- ✅ **自动分析**：每次对话后自动分析最近的消息窗口
+- ⚠️ **条件存储**：默认仅在用户明确请求时存储（可通过自定义 `instructions` 改变）
+- ✅ **自动验证**：自动检查 `validKeys`、`tokenLimit` 等限制
+- ✅ **自动更新**：如果记忆键已存在，自动更新而非创建新记录
+
+**工作流程：**
+1. 用户发送消息 → AI 生成回复
+2. 回复完成后 → 自动调用 `runMemory(messages)`
+3. 取最近 N 条消息（默认 5 条）→ 传递给记忆 Agent
+4. 记忆 Agent 分析消息 → 根据指令决定是否存储
+5. 如果决定存储 → 调用 `set_memory` 工具 → 写入数据库
+6. 下次对话 → 自动读取并注入记忆
+
+**关键配置：**
+- `memory.agent.instructions`：控制存储策略（最重要）
+- `memory.messageWindowSize`：控制分析的消息数量
+- `memory.validKeys`：限制可用的记忆键
+- `memory.tokenLimit`：限制记忆存储总量
+
+### 7.2 核心机制要点总结
+
+#### 7.2.1 记忆嵌入上下文的关键点
+
+1. **时机**：在 `buildMessages()` 阶段，构建系统提示时
+2. **方式**：通过 `getFormattedMemories()` 获取 `withoutKeys`（不包含key的简洁格式）
+3. **位置**：追加到 `systemContent`，作为系统提示的一部分
+4. **效果**：主 Agent 在每次对话时都能看到用户的历史记忆
+
+#### 7.2.2 Agent 特征提取的关键点
+
+1. **独立 Agent**：使用配置的模型（如 Deepseek）创建独立的记忆管理 Agent
+2. **工具调用**：通过 `set_memory` 和 `delete_memory` 工具来存储/删除记忆
+3. **Instructions 驱动**：`memory.agent.instructions` 直接控制 Agent 的行为模式
+4. **消息窗口**：只分析最近的消息（默认5条），提高效率和相关性
+5. **自动执行**：在 AI 回复完成后自动触发，无需用户干预
+
+#### 7.2.3 为什么配置 Agent 后可以自动提取特征？
+
+**答案：**
+1. **LLM 的理解能力**：配置的 Agent 使用 LLM（如 Deepseek）来理解对话内容
+2. **Instructions 指导**：通过自定义 `instructions`，告诉 Agent 应该提取什么类型的信息
+3. **工具调用机制**：Agent 可以主动调用 `set_memory` 工具来存储信息
+4. **自动化流程**：系统在每次对话后自动调用记忆 Agent，无需手动触发
+
+**示例：**
+```yaml
+# config.yaml
+memory:
+  agent:
+    provider: "Deepseek"
+    model: "deepseek-chat"
+    instructions: |
+      你是一个智能记忆管理助手。分析对话内容，自动提取并存储以下类型的重要信息：
+      1. 用户的身份信息（姓名、昵称、职业、角色等）
+      2. 用户的偏好和习惯（喜欢什么、不喜欢什么、常用方式等）
+      ...
+      主动识别并存储重要信息，不要等待用户明确请求。
+```
+
+当用户说"我是软件工程师，喜欢用 Python 开发"时：
+1. 对话完成后，`runMemory()` 自动触发
+2. 记忆 Agent（Deepseek）收到对话内容 + instructions
+3. Agent 理解到这是"身份信息"和"偏好信息"
+4. Agent 调用 `set_memory({ key: "personal_info", value: "用户是软件工程师" })`
+5. Agent 调用 `set_memory({ key: "preferences", value: "用户喜欢用 Python 开发" })`
+6. 信息被存储到 MongoDB
+7. 下次对话时，这些信息会被自动注入到系统提示中
+
 ---
-通过以上分层，LibreChat 实现了“短期窗口 + 可配置记忆 + 外部检索”三位一体的上下文体系，既能保持快速响应，又能按需引入持久记忆与实时数据。开发者可以针对不同层次分别扩展，而不会相互干扰。
+通过以上分层，LibreChat 实现了"短期窗口 + 可配置记忆 + 外部检索"三位一体的上下文体系，既能保持快速响应，又能按需引入持久记忆与实时数据。开发者可以针对不同层次分别扩展，而不会相互干扰。
 
 
