feature: 添加用户管理/模型规格管理/MCP管理功能，包括后端的API接口，优化了不需要的功能

--- a/client/src/locales/zh-Hans/translation.json
+++ b/client/src/locales/zh-Hans/translation.json
@@ -212,7 +212,7 @@
   "com_auth_username_max_length": "用户名最多 20 个字符",
   "com_auth_username_min_length": "用户名至少 2 个字符",
   "com_auth_verify_your_identity": "验证您的身份",
-  "com_auth_welcome_back": "欢迎",
+  "com_auth_welcome_back": "欢迎来到AI朋友圈！",
   "com_citation_more_details": "有关 {{label}} 的更多详情",
   "com_citation_source": "来源",
   "com_click_to_download": "（点击此处下载）",
@@ -532,7 +532,7 @@
   "com_nav_lang_vietnamese": "Tiếng Việt",
   "com_nav_language": "语言",
   "com_nav_latex_parsing": "解析消息中的 LaTeX（可能会影响性能）",
-  "com_nav_log_out": "注销",
+  "com_nav_log_out": "退出登录",
   "com_nav_long_audio_warning": "较长的文本将需要更长时间来处理。",
   "com_nav_maximize_chat_space": "最大化对话窗口",
   "com_nav_mcp_configure_server": "配置 {{0}}",
@@ -1340,5 +1340,82 @@
   "com_ui_agent_table_name": "名称",
   "com_ui_agent_table_description": "描述",
   "com_ui_agent_table_id": "ID / 类别",
-  "com_ui_agent_table_operate": "操作"
+  "com_ui_agent_table_operate": "操作",
+  "com_nav_user_management": "用户管理",
+  "com_nav_not_found_user": "未找到用户",
+  "com_nav_user_create": "新增用户",
+  "com_nav_user_delete": "删除用户",
+  "com_nav_user_confirm_delete": "确定要删除该用户吗？此操作无法撤销。",
+  "com_nav_user_edit": "编辑用户",
+  "com_nav_user_setting_admin": "设为管理员",
+  "com_nav_user_setting_user": "设为普通用户",
+  "com_ui_user_table_nickname": "昵称",
+  "com_ui_user_table_username": "用户名",
+  "com_ui_user_table_email": "邮箱",
+  "com_ui_user_table_role": "角色",
+  "com_ui_user_table_operate": "操作",
+  "com_ui_user_form_password": "密码 *",
+  "com_ui_user_form_new_password": "新密码（留空则不修改）",
+  "com_ui_user_form_update": "更新",
+  "com_ui_user_form_create": "创建",
+  "com_ui_user_form_cancel": "取消",
+  "com_ui_user_form_user": "用户",
+  "com_ui_user_form_admin": "管理员",
+  "com_ui_mcp_management": "MCP管理",
+  "com_ui_not_found": "暂无数据",
+  "com_ui_mcp_create": "新增",
+  "com_ui_mcp_table_name": "名称",
+  "com_ui_mcp_table_type": "类型",
+  "com_ui_mcp_table_url": "URL",
+  "com_ui_mcp_table_timeout": "超时(ms)",
+  "com_ui_mcp_table_chat_menu": "聊天菜单",
+  "com_ui_mcp_table_status": "状态",
+  "com_ui_mcp_table_operate": "操作",
+  "com_ui_mcp_table_yes": "是",
+  "com_ui_mcp_table_no": "否",
+  "com_ui_mcp_table_initial": "初始化中...",
+  "com_ui_mcp_table_reset_initial": "重新初始化",
+  "com_ui_mcp_table_delete": "删除",
+  "com_ui_mcp_table_confirm_delete": "确定要删除该MCP吗？此操作无法撤销。",
+  "com_ui_mcp_form_edit": "编辑 MCP",
+  "com_ui_mcp_form_add": "新增 MCP",
+  "com_ui_mcp_form_name": "名称 *",
+  "com_ui_mcp_form_type": "类型 *",
+  "com_ui_mcp_form_url": "URL *",
+  "com_ui_mcp_form_url_placeholder": "例如: https://mcp.example.com/sse",
+  "com_ui_mcp_form_timeout": "超时时间(毫秒)",
+  "com_ui_mcp_form_header": "Headers (每行一个，格式: key: value)",
+  "com_ui_mcp_form_header_url_placeholder": "例如:&#10;Authorization: Bearer ${TOKEN}&#10;X-Custom-Header: value",
+  "com_ui_mcp_form_enable_chat": "启用聊天菜单",
+  "com_ui_mcp_form_cancel": "取消",
+  "com_ui_mcp_form_update": "更新",
+  "com_ui_mcp_form_create": "创建",
+  "com_ui_model_management": "模型规格管理",
+  "com_ui_model_management_create": "新增",
+  "com_ui_model_table_name": "名称",
+  "com_ui_model_table_base_url": "Base URL",
+  "com_ui_model_table_model_list": "模型列表",
+  "com_ui_model_table_tag": "显示标签",
+  "com_ui_model_table_operate": "操作",
+  "com_ui_model_form_delete": "删除",
+  "com_ui_model_form_confirm_delete": "确定要删除该模型规格吗？此操作无法撤销。",
+  "com_ui_model_form_edit": "编辑模型规格",
+  "com_ui_model_form_add": "新增模型规格",
+  "com_ui_model_form_name": "名称 *",
+  "com_ui_model_form_name_placeholder": "例如: Deepseek",
+  "com_ui_model_form_apiKey": "API Key",
+  "com_ui_model_form_apiKey_placeholder": "例如: ${DEEP_SEEK_API_KEY}",
+  "com_ui_model_form_baseURL": "Base URL *",
+  "com_ui_model_form_baseURL_placeholder": "例如: https://api.deepseek.com/v1",
+  "com_ui_model_form_models": "模型列表 (逗号分隔) *",
+  "com_ui_model_form_models_placeholder": "例如: deepseek-chat, deepseek-coder",
+  "com_ui_model_form_enable_chat_title": "启用对话标题",
+  "com_ui_model_form_chat_title_model": "标题模型",
+  "com_ui_model_form_chat_title_model_placeholder": "例如: deepseek-chat 或 current_model",
+  "com_ui_model_form_tag": "显示标签",
+  "com_ui_model_form_tag_placeholder": "例如: Deepseek",
+  "com_ui_model_form_get_models": "从API获取模型列表",
+  "com_ui_model_form_cancel": "取消",
+  "com_ui_model_form_update": "更新",
+  "com_ui_model_form_create": "创建"
 }
