--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -212,7 +212,7 @@
   "com_auth_username_max_length": "Username must be less than 20 characters",
   "com_auth_username_min_length": "Username must be at least 2 characters",
   "com_auth_verify_your_identity": "Verify Your Identity",
-  "com_auth_welcome_back": "Welcome back",
+  "com_auth_welcome_back": "Welcome to AI Moments!",
   "com_citation_more_details": "More details about {{label}}",
   "com_citation_source": "Source",
   "com_click_to_download": "(click here to download)",
@@ -1344,5 +1344,82 @@
   "com_ui_agent_table_name": "name",
   "com_ui_agent_table_description": "description",
   "com_ui_agent_table_id": "ID / Category",
-  "com_ui_agent_table_operate": "Operate"
+  "com_ui_agent_table_operate": "Operate",
+  "com_nav_user_management": "User Management",
+  "com_nav_not_found_user": "No user found",
+  "com_nav_user_create": "Add user",
+  "com_nav_user_delete": "Delete user",
+  "com_nav_user_confirm_delete": "Are you sure you want to remove the user? This action cannot be undone.",
+  "com_nav_user_edit": "Edit user",
+  "com_nav_user_setting_admin": "Set as an administrator",
+  "com_nav_user_setting_user": "Set to Normal User",
+  "com_ui_user_table_nickname": "nickname",
+  "com_ui_user_table_username": "username",
+  "com_ui_user_table_email": "email",
+  "com_ui_user_table_role": "role",
+  "com_ui_user_table_operate": "Operate",
+  "com_ui_user_form_new_password": "New password (leave blank and do not change)",
+  "com_ui_user_form_password": "password *",
+  "com_ui_user_form_update": "Update",
+  "com_ui_user_form_create": "Create",
+  "com_ui_user_form_cancel": "Cancel",
+  "com_ui_user_form_user": "USER",
+  "com_ui_user_form_admin": "ADMIN",
+  "com_ui_mcp_management": "MCP Management",
+  "com_ui_not_found": "No Data",
+  "com_ui_mcp_create": "Add",
+  "com_ui_mcp_table_name": "name",
+  "com_ui_mcp_table_type": "type",
+  "com_ui_mcp_table_url": "URL",
+  "com_ui_mcp_table_timeout": "timeout(ms)",
+  "com_ui_mcp_table_chat_menu": "chat menu",
+  "com_ui_mcp_table_status": "status",
+  "com_ui_mcp_table_operate": "Operate",
+  "com_ui_mcp_table_yes": "YES",
+  "com_ui_mcp_table_no": "NO",
+  "com_ui_mcp_table_initial": "initializing...",
+  "com_ui_mcp_table_reset_initial": "reinitialize",
+  "com_ui_mcp_table_delete": "delete",
+  "com_ui_mcp_table_confirm_delete": "Are you sure you want to delete that MCP? This action cannot be undone.",
+  "com_ui_mcp_form_edit": "Edit MCP",
+  "com_ui_mcp_form_add": "Add MCP",
+  "com_ui_mcp_form_name": "name *",
+  "com_ui_mcp_form_type": "type *",
+  "com_ui_mcp_form_url": "URL *",
+  "com_ui_mcp_form_url_placeholder": "example: https://mcp.example.com/sse",
+  "com_ui_mcp_form_timeout": "timeout(ms)",
+  "com_ui_mcp_form_header": "Headers (One per line, format: key: value)",
+  "com_ui_mcp_form_header_url_placeholder": "example:&#10;Authorization: Bearer ${TOKEN}&#10;X-Custom-Header: value",
+  "com_ui_mcp_form_enable_chat": "Enable the chat menu",
+  "com_ui_mcp_form_cancel": "cancel",
+  "com_ui_mcp_form_update": "update",
+  "com_ui_mcp_form_create": "create",
+  "com_ui_model_management": "Model Specifications Management",
+  "com_ui_model_management_create": "Add",
+  "com_ui_model_table_name": "name",
+  "com_ui_model_table_base_url": "Base URL",
+  "com_ui_model_table_model_list": "List of models",
+  "com_ui_model_table_tag": "Display labels",
+  "com_ui_model_table_operate": "Operate",
+  "com_ui_model_form_delete": "delete",
+  "com_ui_model_form_confirm_delete": "Are you sure you want to remove the model specs? This action cannot be undone.",
+  "com_ui_model_form_edit": "Edit model specifications",
+  "com_ui_model_form_add": "Add model specifications",
+  "com_ui_model_form_name": "name *",
+  "com_ui_model_form_name_placeholder": "example: Deepseek",
+  "com_ui_model_form_apiKey": "API Key",
+  "com_ui_model_form_apiKey_placeholder": "example: ${DEEP_SEEK_API_KEY}",
+  "com_ui_model_form_baseURL": "Base URL *",
+  "com_ui_model_form_baseURL_placeholder": "example: https://api.deepseek.com/v1",
+  "com_ui_model_form_models": "Model list (comma separated) *",
+  "com_ui_model_form_models_placeholder": "example: deepseek-chat, deepseek-coder",
+  "com_ui_model_form_enable_chat_title": "Enable conversation titles",
+  "com_ui_model_form_chat_title_model": "Title model",
+  "com_ui_model_form_chat_title_model_placeholder": "example: deepseek-chat 或 current_model",
+  "com_ui_model_form_tag": "Display labels",
+  "com_ui_model_form_tag_placeholder": "example: Deepseek",
+  "com_ui_model_form_get_models": "Get a list of models from the API",
+  "com_ui_model_form_cancel": "cancel",
+  "com_ui_model_form_update": "update",
+  "com_ui_model_form_create": "create"
 }
