feature: 恢复右侧边栏，将思维链面板布局(工具调用结果+DAT思维链)放入右侧板中支持折叠

--- a/client/src/locales/zh-Hans/translation.json
+++ b/client/src/locales/zh-Hans/translation.json
@@ -541,7 +541,7 @@
   "com_nav_mcp_vars_updated": "MCP 自定义用户变量更新成功。",
   "com_nav_modular_chat": "启用在对话中切换端点",
   "com_nav_my_files": "我的文件",
-  "com_nav_agent_management": "智能体管理",
+  "com_nav_agent_management": "智能体平台",
   "com_sidepanel_model_config": "模型规格配置",
   "com_nav_not_supported": "未支持",
   "com_nav_open_sidebar": "打开侧边栏",
